<resources>
    <string name="app_name">Spotterly</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="preguntasFrecuentes1">¿Cómo funciona la aplicación?</string>
    <string name="preguntasFrecuentes2">La aplicación utiliza sensores en las calles, datos colaborativos de la comunidad de usuarios y algoritmos de inteligencia artificial para proporcionarte información en tiempo real sobre la disponibilidad de espacios de aparcamiento en la vía pública.</string>
    <string name="preguntasFrecuentes3">¿Qué tipo de estacionamiento muestra la aplicación?</string>
    <string name="preguntasFrecuentes4">La aplicación te muestra los huecos de estacionamiento gratuitos en la vía pública, no estacionamientos privados o de pago.</string>
    <string name="preguntasFrecuentes5">¿Cómo puede predecir la app cuándo habrá un hueco libre?</string>
    <string name="preguntasFrecuentes6">La aplicación utiliza un análisis de patrones de estacionamiento para predecir los momentos en que es más probable encontrar espacios libres, tomando en cuenta horarios y días específicos, además de las valoraciones de otros usuarios.</string>
    <string name="preguntasFrecuentes7">¿Necesito estar conectado a internet para usar la app?</string>
    <string name="preguntasFrecuentes8">Sí, para obtener información en tiempo real sobre la disponibilidad de aparcamiento y recibir actualizaciones, es necesario tener acceso a internet.</string>
    <string name="preguntasFrecuentes9">¿Puedo ayudar a mejorar la aplicación?</string>
    <string name="preguntasFrecuentes10">¡Sí! Puedes contribuir con la comunidad al compartir información sobre espacios libres de estacionamiento que encuentres, lo que ayudará a mejorar la precisión de las predicciones.</string>
    <string name="preguntasFrecuentes11">¿La aplicación tiene algún costo?</string>
    <string name="preguntasFrecuentes12">La aplicación es gratuita para descargar. Sin embargo, para utilizar las funciones requiere una suscripción.</string>
    <string name="preguntasFrecuentes13">¿Qué datos recopila la aplicación?</string>
    <string name="preguntasFrecuentes14">Recopilamos datos de ubicación para proporcionarte resultados personalizados, pero respetamos tu privacidad y no compartimos tu información con terceros sin tu consentimiento.</string>
    <string name="preguntasFrecuentes15">¿La aplicación muestra la tarifa de estacionamiento?</string>
    <string name="preguntasFrecuentes16">Por el momento, la aplicación solo muestra espacios de estacionamiento gratuitos. Estamos explorando incluir información sobre tarifas en futuras versiones.</string>
    <string name="preguntasFrecuentes17">¿Puedo guardar la ubicación de mi coche?</string>
    <string name="preguntasFrecuentes18">Sí, puedes marcar la ubicación de tu coche para recordarla y encontrarlo fácilmente después.</string>
    <string name="preguntasFrecuentes19">¿Qué hago si no encuentro un espacio libre donde indica la app?</string>
    <string name="preguntasFrecuentes20">Las predicciones se basan en datos en tiempo real y patrones históricos. Si no encuentras un espacio libre, actualiza la búsqueda o revisa los espacios cercanos sugeridos.</string>
    <string name="preguntasFrecuentes21">¿La app registra mi historial de ubicaciones?</string>
    <string name="preguntasFrecuentes22">Solo registramos ubicaciones para mejorar las predicciones de aparcamiento y siempre respetando tu privacidad.</string>
    <string name="preguntasFrecuentes23">¿Qué dispositivos son compatibles con la app?</string>
    <string name="preguntasFrecuentes24">La aplicación es compatible con dispositivos Android y que cumplan con los requisitos mínimos de sistema operativo.</string>
    <string name="preguntasFrecuentes25">¿La app consume mucha batería?</string>
    <string name="preguntasFrecuentes26">Optimizamos la app para minimizar el consumo de batería. Sin embargo, el uso continuo del GPS puede aumentar el consumo energético.</string>

    <string name="title_activity_inicionav">InicionavActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_cerrar">Cerrar Sesión</string>

    <string name="menu_1">Localización</string>
    <string name="menu_2">Consultar</string>
    <string name="menu_3">Perfil</string>
    <string name="menu_4">Preguntas Frecuentes</string>
    <string name="menu_5">Suscripciones</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>