<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_localizacion"
            android:icon="@drawable/ic_localizacion"
            android:title="@string/menu_1" />
        <item
            android:id="@+id/nav_consultar"
            android:icon="@drawable/ic_parking"
            android:title="@string/menu_2" />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_perfil"
            android:title="@string/menu_3" />
        <item
            android:id="@+id/nav_configuracion"
            android:icon="@drawable/ic_pregunta"
            android:title="@string/menu_4" />
        <item
            android:id="@+id/nav_suscripciones"
            android:icon="@drawable/ic_suscripcion"
            android:title="@string/menu_5" />
    </group>

</menu>