<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_localizacion">

    <fragment
        android:id="@+id/nav_localizacion"
        android:name="com.example.spotterly.ui.localizacion.LocalizacionFragment"
        android:label="@string/menu_1"
        tools:layout="@layout/fragment_localizacion" >
    </fragment>

    <fragment
        android:id="@+id/nav_consultar"
        android:name="com.example.spotterly.ui.consultar.ConsultarFragment"
        android:label="@string/menu_2"
        tools:layout="@layout/fragment_consultar" >
    </fragment>

    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.example.spotterly.ui.perfil.PerfilFragment"
        android:label="@string/menu_3"
        tools:layout="@layout/fragment_perfil" />

    <fragment
        android:id="@+id/nav_configuracion"
        android:name="com.example.spotterly.ui.configuracion.ConfiguracionFragment"
        android:label="@string/menu_4"
        tools:layout="@layout/fragment_configuracion" />

    <fragment
        android:id="@+id/nav_suscripciones"
        android:name="com.example.spotterly.ui.suscripciones.SuscripcionesFragment"
        android:label="@string/menu_5"
        tools:layout="@layout/fragment_suscripciones" />

</navigation>